--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
 </head>
 
 <body>
-  <img src="./img/rock.jpg">
-  <div class="descricao">
-    <h2>Nome da música</h2>
-    <i>João Tinti</i>
-  </div>
-  <div class="duracao">
-    <div class="barra">
-      <progress value="0" max="1"></progress>
-      <div class="ponto"></div>
+  <div class="container">
+    <img src="./img/rock.jpg">
+    <div class="descricao">
+      <h2>Nome da música</h2>
+      <i>João Tinti</i>
     </div>
-    <div class="tempo">
-      <p class="inicio">0:00</p>
-      <p class="fim">3:40</p>
+    <div class="duracao">
+      <div class="barra">
+        <progress value="0" max="1"></progress>
+        <div class="ponto"></div>
+      </div>
+      <div class="tempo">
+        <p class="inicio">0:00</p>
+        <p class="fim">3:40</p>
+      </div>
     </div>
+    <div class="player">
+      <i class="fas fa-step-backward setas anterior"></i>
+      <i class="fas fa-play-circle botao-play"></i>
+      <i class="fas fa-pause-circle botao-pause"></i>
+      <i class="fas fa-step-forward setas proxima"></i>
+    </div>
+    <audio src="./musics/We Ride! - Reed Mathis.mp3"></audio>
   </div>
-  <div class="player">
-    <i class="fas fa-step-backward setas anterior"></i>
-    <i class="fas fa-play-circle botao-play"></i>
-    <i class="fas fa-pause-circle botao-pause"></i>
-    <i class="fas fa-step-forward setas proxima"></i>
-  </div>
-  <audio src="./musics/We Ride! - Reed Mathis.mp3"></audio>
-  <script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
